<resources>
    <string name="app_name">SerenoteApp</string>
    <string name="locked">Terkunci</string>
    <string name="pinned">Ditandai</string>
    <string name="star">Bintang</string>
    <string name="export">Ekspor</string>
    <string name="share">Bagikan</string>
    <string name="archive">Arsipkan</string>
    <string name="delete">Hapus</string>
    <string name="reminder">Pengingat</string>
    <string name="pin">Sematkan</string>

    <!-- ✅ Tambahkan ini -->
    <string-array name="spinner_items">
        <item>Semua</item>
        <item>Judul (A-Z)</item>
        <item>Terbaru</item>
    </string-array>
</resources>
